--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Harshavardhan K | Portfolio</title>
 
     <style>
         body {
@@ -74,8 +74,8 @@
 <body>
 
     <header>
-        <h1>My Portfolio</h1>
-        <p>Cloud Computing | Azure | Web Development</p>
+        <h1>Harshavardhan K</h1>
+        <p>Cloud Computing | Azure | Web Development | AI Student</p>
     </header>
 
     <div class="container">
@@ -83,47 +83,4 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Hello! I am a student passionate about Cloud Computing and Web Development. 
-                I created this portfolio website and deployed it using GitHub Pages as part of my cloud project.
-            </p>
-        </section>
-
-        <!-- Skills Section -->
-        <section>
-            <h2>Skills</h2>
-            <div class="skills">
-                <span>Azure</span>
-                <span>GitHub</span>
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-                <span>Python</span>
-                <span>Cloud Deployment</span>
-            </div>
-        </section>
-
-        <!-- Projects Section -->
-        <section>
-            <h2>Projects</h2>
-            <ul class="projects">
-                <li>🌐 Cloud-Deployed Personal Portfolio (GitHub Pages)</li>
-                <li>☁️ Static Website Hosting in Cloud</li>
-                <li>⚡ Azure Function – Serverless Hello World API</li>
-                <li>📦 Blob Storage Static Website Hosting</li>
-            </ul>
-        </section>
-
-        <!-- Contact Section -->
-        <section>
-            <h2>Contact</h2>
-            <p>Email: yourname@gmail.com</p>
-            <p>GitHub: github.com/yourusername</p>
-        </section>
-    </div>
-
-    <footer>
-        © 2025 My Portfolio | Hosted on GitHub Pages
-    </footer>
-
-</body>
-</html>
+                Hello! I am <strong>Harsha
