--- a/index.html
+++ b/index.html
@@ -83,4 +83,56 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Hello! I am <strong>Harsha
+                Hello! I am <strong>Harshavardhan K</strong>, a B.Tech Artificial Intelligence student with strong interest in 
+                <strong>Cloud Computing, Azure, and Web Development</strong>.  
+                This website is part of my cloud-based project where I deployed my portfolio using GitHub Pages.
+            </p>
+        </section>
+
+        <!-- Skills Section -->
+        <section>
+            <h2>Skills</h2>
+            <div class="skills">
+                <span>Azure</span>
+                <span>GitHub</span>
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+                <span>Python</span>
+                <span>Java</span>
+                <span>Cloud Deployment</span>
+                <span>Web Hosting</span>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section>
+            <h2>Projects</h2>
+            <ul class="projects">
+                <li>🌐 Cloud-Deployed Personal Portfolio (GitHub Pages)</li>
+                <li>☁️ Static Website Hosting using Azure Blob Storage</li>
+                <li>⚡ Azure Function – Serverless HTTP Trigger API</li>
+                <li>📦 Blob Storage Static Web App Deployment</li>
+                <li>🔐 Retina Authentication System (98% Accuracy)</li>
+                <li>🎓 Campus Event & Workshop Management System</li>
+            </ul>
+        </section>
+
+        <!-- Contact Section -->
+        <section>
+            <h2>Contact</h2>
+            <p><strong>Email:</strong> hkothapa@gitam.in</p>
+            <p><strong>Phone:</strong> +91 9502871674</p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/Harshavardhan6868" target="_blank">github.com/Harshavardhan6868</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/harsha-vardhan-864981258" target="_blank">
+                linkedin.com/in/harsha-vardhan-864981258
+            </a></p>
+        </section>
+    </div>
+
+    <footer>
+        © 2025 Harshavardhan K | Hosted on GitHub Pages
+    </footer>
+
+</body>
+</html>
